2022-05-22  Bruno Haible  <bruno@clisp.org>

	Add GNU Project notice.
	* JOIN-GNU: New file. Inspired by a suggestion from José E. Marchesi
	on the gnu-prog-discuss mailing list.
	* README: Refer to it.
	* Makefile.in (SOURCE_FILES): Add it.

2022-02-07  Bruno Haible  <bruno@clisp.org>

	tests: Fix undefined behaviour.
	* tests/test2.c (main): Cast bytes to unsigned before shifting left.

2022-01-05  Bruno Haible  <bruno@clisp.org>

	Release gperf-3.2.
	* src/version.cc (version_string): Bump to 3.2.
	* src/options.cc (Options::parse_options): Bump copyright year.
	* tests/*.exp: Update.
	* doc/gperf.texi: Bump date.

2021-06-06  Michael Drake  <tlsa@netsurf-browser.org>  (tiny change)

	Honor --readonly-tables when outputting table for --ignore-case.
	* src/output.cc (output_upperlower_table): Add 'const' when suitable.

2021-01-30  Bruno Haible  <bruno@clisp.org>

	Mark Autoconf 2.71 as supported.
	* autogen.sh: Update comment.

2020-12-08  Bruno Haible  <bruno@clisp.org>

	Mark Autoconf 2.70 as supported.
	* autogen.sh: Update comment.

2020-10-04  Bruno Haible  <bruno@clisp.org>

	Fix warnings from Autoconf 2.69c.
	* configure.ac: Invoke AC_INIT, AC_OUTPUT without arguments.
	* doc/configure.ac: Likewise.
	* lib/configure.ac: Likewise.
	* src/configure.ac: Invoke AC_INIT, AC_OUTPUT without arguments. Use
	AC_CACHE_CHECK, AC_LANG_PUSH/AC_LANG_POP, AC_COMPILE_IFELSE
	* tests/configure.ac: Invoke AC_INIT, AC_OUTPUT without arguments. Use
	ac_cv_c_compiler_gnu instead of ac_cv_prog_gcc, and
	ac_cv_cxx_compiler_gnu instead of ac_cv_prog_gxx. Don't use 'test' with
	option '-a'.

2020-08-30  Bruno Haible  <bruno@clisp.org>

	Make the code C++17 compliant.
	* lib/getline.cc (getstr): Don't use the 'register' keyword.

2020-08-29  Bruno Haible  <bruno@clisp.org>

	Fix link error on native Windows with MSVC/clang.
	* tests/test2.c (SET_BINARY): On native Windows, use _setmode, not
	setmode.

2020-08-29  Bruno Haible  <bruno@clisp.org>

	Update after gnulib changed.