@@ -1,3 +1,6 @@
+# Files brought in by gnulib-tool:
+/filename.h
+
 # Files generated by the autotools:
 /configure
 
