@@ -1,5 +1,5 @@
 /* ANSI-C code produced by gperf version 3.2 */
-/* Command-line: ../src/gperf -g -o -j1 -t -N is_reserved_word  */
+/* Command-line: gperf -g -o -j1 -t -N is_reserved_word  */
 /* Computed positions: -k'1,$' */
 
 #if !((' ' == 32) && ('!' == 33) && ('"' == 34) && ('#' == 35) \
