@@ -1,5 +1,5 @@
 /* ANSI-C code produced by gperf version 3.2 */
-/* Command-line: ../src/gperf -C -E -G -I -t  */
+/* Command-line: gperf -C -E -G -I -t  */
 /* Computed positions: -k'1-3,5,$' */
 
 #if !((' ' == 32) && ('!' == 33) && ('"' == 34) && ('#' == 35) \
